--- a/index.html
+++ b/index.html
@@ -1,158 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tangent Group - Recruitment Agency UAE</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; background: #f9f9f9; }
-    header { background: url('https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80') no-repeat center/cover; color: white; padding: 60px 20px; text-align: center; position: relative; }
-    header img.logo { width: 120px; position: absolute; top: 20px; left: 20px; background: white; border-radius: 8px; padding: 5px; }
-    header h1 { margin: 0; font-size: 2.5rem; text-shadow: 2px 2px 6px rgba(0,0,0,0.6); }
-    header p { font-size: 1.2rem; }
-    nav { background: #003366; display: flex; justify-content: center; padding: 12px; }
-    nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
-    nav a:hover { text-decoration: underline; }
-    section { padding: 50px 20px; max-width: 1100px; margin: auto; background: white; margin-top: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-    h2 { color: #004080; margin-bottom: 20px; text-align: center; }
-    .stats { display: flex; justify-content: space-around; background: #004080; color: white; padding: 30px; border-radius: 10px; margin: 20px 0; }
-    .stats div { text-align: center; }
-    .stats h2 { color: white; font-size: 2rem; margin: 0; }
-    ul { list-style: none; padding: 0; }
-    ul li { padding: 10px 0; font-size: 1.1rem; }
-    ul li::before { content: "? "; color: #004080; }
-    form { display: flex; flex-direction: column; gap: 15px; }
-    input, textarea, button { padding: 12px; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; }
-    button { background: #004080; color: white; cursor: pointer; font-weight: bold; }
-    button:hover { background: #003366; }
-    footer { background: #004080; color: white; text-align: center; padding: 20px; margin-top: 30px; }
-    .contact-info { text-align: center; margin-top: 20px; }
-    .contact-info p { margin: 8px 0; font-size: 1rem; }
-    .contact-info i { color: #004080; margin-right: 8px; }
-    .sectors { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; }
-    .sectors div { text-align: center; border: 1px solid #ddd; border-radius: 10px; padding: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.05); }
-    .sectors img { width: 100%; height: 180px; object-fit: cover; border-radius: 10px; }
-    .sectors h3 { margin-top: 10px; color: #004080; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tangent Group - Recruitment Agency UAE</title>
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+<style>
+body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; background: #f9f9f9; overflow-x: hidden; }
+header { background: url('https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover; color: white; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; position: relative; }
+header::after { content: ""; position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.5); }
+header * { position: relative; z-index: 2; }
+header img.logo { width: 120px; position: absolute; top: 20px; left: 20px; background: white; border-radius: 8px; padding: 5px; }
+header h1 { font-size: 3rem; margin: 0; }
+header p { font-size: 1.3rem; margin-top: 10px; }
+header a.btn { display: inline-block; margin-top: 20px; padding: 12px 25px; background: #ffcc00; color: #003366; font-weight: bold; text-decoration: none; border-radius: 6px; transition: background 0.3s; }
+header a.btn:hover { background: #ffd633; }
+nav { background: #003366; display: flex; justify-content: center; gap: 20px; padding: 15px; position: sticky; top: 0; z-index: 1000; }
+nav a { color: white; text-decoration: none; font-weight: bold; transition: color 0.3s; }
+nav a:hover { color: #ffcc00; }
+section { padding: 60px 20px; max-width: 1100px; margin: auto; background: white; margin-top: 40px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); opacity: 0; transform: translateY(30px); transition: all 1s ease; }
+section.visible { opacity: 1; transform: translateY(0); }
+h2 { color: #004080; margin-bottom: 20px; text-align: center; font-size: 2rem; }
+.stats { display: flex; flex-wrap: wrap; justify-content: space-around; background: #004080; color: white; padding: 30px; border-radius: 10px; margin: 20px 0; }
+.stats div { text-align: center; margin: 10px; }
+.stats h2 { color: white; font-size: 2rem; margin: 0; }
+.sectors { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; }
+.sectors div { text-align: center; border: 1px solid #ddd; border-radius: 10px; padding: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.05); transition: transform 0.4s, box-shadow 0.4s; }
+.sectors div:hover { transform: translateY(-8px) scale(1.02); box-shadow: 0 8px 16px rgba(0,0,0,0.15); }
+.sectors img { width: 100%; height: 180px; object-fit: cover; border-radius: 10px; }
+.sectors h3 { margin-top: 10px; color: #004080; }
+form { display: flex; flex-direction: column; gap: 15px; }
+input, textarea, button { padding: 12px; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; }
+button { background: #004080; color: white; cursor: pointer; font-weight: bold; border: none; transition: transform 0.3s, background 0.3s; }
+button:hover { background: #003366; transform: scale(1.05); }
+footer { background: #003366; color: white; text-align: center; padding: 40px 20px 20px 20px; margin-top: 30px; }
+.social-icons { margin-top: 20px; }
+.social-icons a { color: white; margin: 0 15px; font-size: 2.2rem; transition: transform 0.3s, color 0.3s; display: inline-block; }
+.social-icons a:hover { color: #ffcc00; transform: scale(1.2) translateY(-5px); }
+.contact-container { display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; align-items: flex-start; }
+.contact-info, .contact-form { background: #f0f4f8; padding: 20px; border-radius: 12px; flex: 1 1 300px; max-width: 500px; }
+.contact-info p { margin: 15px 0; font-size: 1rem; }
+.contact-info i { color: #004080; margin-right: 8px; }
+</style>
 </head>
 <body>
-  <header>
-    <img src="Tangent Group LOGO25.jpg" alt="Tangent Group Logo" class="logo">
-    <h1>Tangent Group - UAE</h1>
-    <p>27 Years of Excellence in Recruitment & Workforce Solutions</p>
-  </header>
 
-  <nav>
+<header>
+  <img src="tangent-logo.jpg" alt="Tangent Logo" class="logo">
+  <h1>Tangent Group - UAE</h1>
+  <p>27 Years of Excellence in Recruitment & Workforce Solutions</p>
+  <a href="#about" class="btn">Learn More</a>
+</header>
 
-    <a href="#home">Home Us</a>
-    <a href="#about">About Us</a>
-    <a href="#services">Services</a>
-    <a href="#offices">Our Offices</a>
-    <a href="#sectors">Sectors</a>
-    <a href="#inquiry">Inquiry</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<nav>
+  <a href="#home">Home</a>
+  <a href="#about">About Us</a>
+  <a href="#services">Services</a>
+  <a href="#offices">Our Offices</a>
+  <a href="#sectors">Sectors</a>
+  <a href="#inquiry">Inquiry</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Founded 27 years ago in the UAE, Tangent Group is a trusted recruitment agency specializing in overseas and local manpower supply. Over the years, we have successfully deployed more than We are the world leaders in an innovative workforce, a single stop solution provider for all the Business related needs inclusive but not limited to HR & Recruitment. Tangent connects the human potentials to the power of business advisory for clients and candidates. We serve both large and small organizations across all industry sectors through different brands. Tangent operates a worldwide network of offices in different continents ,“A Global reach with a local touch”
+<section id="about">
+<h2>About Us</h2>
+<p>Founded 27 years ago in the UAE, Tangent Group is a trusted recruitment agency specializing in overseas and local manpower supply. We are a single-stop solution provider for all business-related needs inclusive of HR & Recruitment. With a global reach and a local touch, we have successfully deployed <strong>35,000 employees</strong> across the UAE and GCC.</p>
+</section>
 
-Our team provide strategic business consulting, application services, technology solutions and Management Services.We have extensive experience in successfully executing HR and Recruitment projects throughout the UAE and other GCC countries including Oman, Qatar, Saudi Arabia and Kuwait. <strong>35,000 employees</strong> across the UAE in various industries. Our reputation is built on integrity, professionalism, and a global network of talent partners.</p>
-  </section>
+<section class="stats">
+<div><h2>27+</h2><p>Years of Experience</p></div>
+<div><h2>35,000+</h2><p>Employees Deployed</p></div>
+<div><h2>15+</h2><p>Global Offices</p></div>
+</section>
 
-  <section class="stats">
-    <div>
-      <h2>27+</h2>
-      <p>Years of Experience</p>
-    </div>
-    <div>
-      <h2>35,000+</h2>
-      <p>Employees Deployed</p>
-    </div>
-    <div>
-      <h2>15+</h2>
-      <p>Global Offices</p>
-    </div>
-  </section>
+<section id="services">
+<h2>Our Services</h2>
+<ul>
+<li>Overseas Recruitment</li>
+<li>Local Recruitment & Staffing</li>
+<li>Skilled, Semi-skilled & Unskilled Manpower Supply</li>
+<li>HR Consultancy & Workforce Planning</li>
+<li>Executive Search & Head Hunting</li>
+</ul>
+</section>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Overseas Recruitment</li>
-      <li>Local Recruitment & Staffing</li>
-      <li>Skilled, Semi-skilled & Unskilled Manpower Supply</li>
-      <li>HR Consultancy & Workforce Planning</li>
-      <li>Executive Search & Head Hunting</li>
-    </ul>
-  </section>
+<section id="sectors">
+<h2>Industries We Serve</h2>
+<div class="sectors">
+<div><img src="https://images.unsplash.com/photo-1590490360182-663fc1a2a64e?auto=format&fit=crop&w=800&q=80" alt="Construction Workers"><h3>Construction Workers</h3></div>
+<div><img src="https://images.unsplash.com/photo-1559339352-11d035aa65de?auto=format&fit=crop&w=800&q=80" alt="Hospitality"><h3>Hospitality Industry</h3></div>
+<div><img src="https://images.unsplash.com/photo-1594322436404-5a0521e2e9cb?auto=format&fit=crop&w=800&q=80" alt="Facilities Management"><h3>Facilities Management</h3></div>
+<div><img src="https://images.unsplash.com/photo-1603899122459-0f2f69b3cbb5?auto=format&fit=crop&w=800&q=80" alt="Security"><h3>Security Services</h3></div>
+</div>
+</section>
 
-  <section id="offices">
-    <h2>Our Global Presence</h2>
-    <p><strong>Main Office:</strong> UAE</p>
-    <p><strong>Branch Offices:</strong> India, Nepal, Pakistan, Bangladesh, Africa</p>
-    <p><strong>Associate Offices:</strong> Philippines, Sri Lanka, Indonesia, Myanmar, Egypt, Sudan, Ghana, Kenya, Uganda</p>
-  </section>
+<section id="inquiry">
+<h2>Job Inquiry / Submit CV</h2>
+<form action="mailto:dxbcareers2u@gmail.com" method="post" enctype="multipart/form-data">
+<input type="text" name="name" placeholder="Full Name" required>
+<input type="email" name="email" placeholder="Email Address" required>
+<input type="tel" name="phone" placeholder="Phone Number" required>
+<textarea name="message" rows="4" placeholder="Your Inquiry"></textarea>
+<input type="file" name="cv" accept=".pdf,.doc,.docx" required>
+<button type="submit"><i class="fas fa-paper-plane"></i> Send Application</button>
+</form>
+</section>
 
-  <section id="sectors">
-    <h2>Industries We Serve</h2>
-    <div class="sectors">
-      <div>
-        <img src="https://images.unsplash.com/photo-1590490360182-663fc1a2a64e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Construction Workers">
-        <h3>Construction Workers</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1559339352-11d035aa65de?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Hospitality">
-        <h3>Hospitality Industry</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1594322436404-5a0521e2e9cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Facilities Management">
-        <h3>Facilities Management</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1603899122459-0f2f69b3cbb5?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Security">
-        <h3>Security Services</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1595433562696-a8c0d3b3d57d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Cleaning">
-        <h3>Cleaning Services</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Office Management">
-        <h3>Office Management</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1581092795360-469b6a3b17f6?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Oil & Gas">
-        <h3>Oil & Gas Field</h3>
-      </div>
-    </div>
-  </section>
+<section id="contact">
+<h2>Contact Us</h2>
+<div class="contact-container">
+  <div class="contact-info">
+    <p><i class="fas fa-phone"></i> +971 4 3979686 | 04 - 3465669</p>
+    <p><i class="fas fa-envelope"></i> <a href="mailto:hrteam@emirates.net.ae">hrteam@emirates.net.ae</a></p>
+    <p><i class="fas fa-globe"></i> <a href="http://www.tangentdubai.com" target="_blank">www.tangentdubai.com</a></p>
+    <p><i class="fas fa-map-marker-alt"></i> Dubai, United Arab Emirates</p>
+  </div>
+</div>
+</section>
 
-  <section id="inquiry">
-    <h2>Job Inquiry / Submit CV</h2>
-    <form action="mailto:dxbjobs2u@gmail.com" method="post" enctype="multipart/form-data">
-      <input type="text" name="name" placeholder="Full Name" required>
-      <input type="email" name="email" placeholder="Email Address" required>
-      <input type="tel" name="phone" placeholder="Phone Number" required>
-      <textarea name="message" rows="4" placeholder="Your Inquiry"></textarea>
-      <input type="file" name="cv" accept=".pdf,.doc,.docx" required>
-      <button type="submit"><i class="fas fa-paper-plane"></i> Send Application</button>
-    </form>
-    <p style="text-align:center; margin-top:10px; font-size:0.9rem; color:#555;">*CV will be sent to our HR team at dxbjobs2u@gmail.com</p>
-  </section>
+<footer>
+<p>&copy; 2025 Tangent Group | All Rights Reserved</p>
+<div class="social-icons">
+  <a href="https://www.facebook.com/profile.php?id=61577614177171" target="_blank"><i class="fab fa-facebook"></i></a>
+  <a href="https://www.linkedin.com/in/rahuldxbcareers2u/" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href="https://www.instagram.com/tangent_hr_solution/" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.tiktok.com/@tangenthrjobs?lang=en" target="_blank"><i class="fab fa-tiktok"></i></a>
+</div>
+</footer>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <div class="contact-info">
-      <p><i class="fas fa-phone"></i> +971 4 3979686 | 04 - 3465669</p>
-      <p><i class="fas fa-envelope"></i> <a href="mailto:hrteam@emirates.net.ae">hrteam@emirates.net.ae</a></p>
-      <p><i class="fas fa-globe"></i> <a href="http://www.tangentdubai.com" target="_blank">www.tangentdubai.com</a></p>
-      <p><i class="fas fa-map-marker-alt"></i> Dubai, United Arab Emirates</p>
-    </div>
-  </section>
+<script>
+// Scroll animations
+const sections = document.querySelectorAll('section');
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if(entry.isIntersecting){
+      entry.target.classList.add('visible');
+    }
+  });
+},{threshold:0.2});
+sections.forEach(section => { observer.observe(section); });
+</script>
 
-  <footer>
-    <p>&copy; 2025 Tangent Group | All Rights Reserved</p>
-  </footer>
 </body>
 </html>
