--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 
 <style>
 body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; background: #f9f9f9; overflow-x: hidden; }
-header { background: url('https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover; color: white; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; position: relative; }
+header {
+  background: url('https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover;
+  color: white;
+  height: 60vh; /* Reduced from 100vh to 60vh */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
 header::after { content: ""; position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.5); }
 header * { position: relative; z-index: 2; }
 header img.logo { width: 120px; position: absolute; top: 20px; left: 20px; background: white; border-radius: 8px; padding: 5px; }
@@ -148,3 +158,4 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
