--- a/index.html
+++ b/index.html
@@ -12,37 +12,66 @@
 
 <style>
 body { font-family: 'Poppins', sans-serif; margin: 0; padding: 0; background: #f9f9f9; overflow-x: hidden; }
-header { background: url('https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover; color: white; height: 60vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; position: relative; }
-header::after { content: ""; position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.5); }
+
+header {
+  background: url('https://images.unsplash.com/photo-1521791136064-7986c2920216?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover;
+  color: white;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
+header::after {
+  content: "";
+  position: absolute;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: rgba(0,0,0,0.5);
+}
 header * { position: relative; z-index: 2; }
 header img.logo { width: 120px; position: absolute; top: 20px; left: 20px; background: white; border-radius: 8px; padding: 5px; }
 header h1 { font-size: 2.2rem; margin: 0; }
 header p { font-size: 1rem; margin-top: 10px; }
 header a.btn { display: inline-block; margin-top: 15px; padding: 10px 20px; background: #ffcc00; color: #003366; font-weight: bold; text-decoration: none; border-radius: 6px; transition: background 0.3s; }
 header a.btn:hover { background: #ffd633; }
+
 nav { background: #003366; display: flex; justify-content: center; gap: 20px; padding: 15px; position: sticky; top: 0; z-index: 1000; }
 nav a { color: white; text-decoration: none; font-weight: bold; transition: color 0.3s; }
 nav a:hover { color: #ffcc00; }
-section { padding: 60px 20px; max-width: 1100px; margin: auto; background: white; margin-top: 40px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); opacity: 0; transform: translateY(30px); transition: all 1s ease; }
+
+section {
+  padding: 60px 20px;
+  max-width: 1100px;
+  margin: 40px auto;
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 1s ease;
+}
 section.visible { opacity: 1; transform: translateY(0); }
+
 h2 { color: #004080; margin-bottom: 20px; text-align: center; font-size: 2rem; }
 
 .stats {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
-  justify-content: center; /* Center the stats */
-  gap: 40px; /* Space between items */
+  gap: 40px;
   background: #004080;
   color: white;
   padding: 30px;
   border-radius: 10px;
-  margin: 20px 0;
+  margin: 20px auto;
   text-align: center;
+  max-width: 800px;
 }
-.stats div {
-  min-width: 150px;
-  margin: 0;
-}
+.stats div { min-width: 150px; margin: 0; text-align: center; }
 .stats h2 { color: white; font-size: 2rem; margin: 0; }
 
 .sectors { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px; }
@@ -88,9 +117,7 @@ footer { background: #003366; color: white; text-align: center; padding: 40px 20
 
 <section id="about">
 <h2>About Us</h2>
-<p>Founded 27 years ago in the UAE, Tangent Group is a trusted recruitment agency specializing in overseas and local manpower supply. Over the years, we have successfully deployed more than We are the world leaders in an innovative workforce, a single stop solution provider for all the Business related needs inclusive but not limited to HR & Recruitment. Tangent connects the human potentials to the power of business advisory for clients and candidates. We serve both large and small organizations across all industry sectors through different brands. Tangent operates a worldwide network of offices in different continents ,“A Global reach with a local touch”
-
-Our team provide strategic business consulting, application services, technology solutions and Management Services.We have extensive experience in successfully executing HR and Recruitment projects throughout the UAE and other GCC countries including Oman, Qatar, Saudi Arabia and Kuwait. <strong>35,000 employees</strong> across the UAE in various industries. Our reputation is built on integrity, professionalism, and a global network of talent partners.</p>
+<p>Founded 27 years ago in the UAE, Tangent Group is a trusted recruitment agency specializing in overseas and local manpower supply. Our team provide strategic business consulting, application services, technology solutions and Management Services. <strong>35,000 employees</strong> across the UAE in various industries. Our reputation is built on integrity, professionalism, and a global network of talent partners.</p>
 </section>
 
 <section class="stats visible">
@@ -169,4 +196,3 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
-
