--- a/index.html
+++ b/index.html
@@ -140,10 +140,34 @@ footer { background: #003366; color: white; text-align: center; padding: 40px 20
 <section id="sectors">
 <h2>Industries We Serve</h2>
 <div class="sectors">
-<div><img src="https://images.unsplash.com/photo-1590490360182-663fc1a2a64e?auto=format&fit=crop&w=800&q=80" alt="Construction Workers"><h3>Construction Workers</h3></div>
-<div><img src="https://images.unsplash.com/photo-1559339352-11d035aa65de?auto=format&fit=crop&w=800&q=80" alt="Hospitality"><h3>Hospitality Industry</h3></div>
-<div><img src="https://images.unsplash.com/photo-1594322436404-5a0521e2e9cb?auto=format&w=800&q=80" alt="Facilities Management"><h3>Facilities Management</h3></div>
-<div><img src="https://images.unsplash.com/photo-1603899122459-0f2f69b3cbb5?auto=format&w=800&q=80" alt="Security"><h3>Security Services</h3></div>
+<div>
+        <img src="https://images.unsplash.com/photo-1590490360182-663fc1a2a64e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Construction Workers">
+        <h3>Construction Workers</h3>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1559339352-11d035aa65de?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Hospitality">
+        <h3>Hospitality Industry</h3>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1594322436404-5a0521e2e9cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Facilities Management">
+        <h3>Facilities Management</h3>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1603899122459-0f2f69b3cbb5?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Security">
+        <h3>Security Services</h3>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1595433562696-a8c0d3b3d57d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Cleaning">
+        <h3>Cleaning Services</h3>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Office Management">
+        <h3>Office Management</h3>
+      </div>
+      <div>
+        <img src="https://images.unsplash.com/photo-1581092795360-469b6a3b17f6?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Oil & Gas">
+        <h3>Oil & Gas Field</h3>
+      </div>
 </div>
 </section>
 
@@ -196,3 +220,4 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
