--- a/index.html
+++ b/index.html
@@ -91,9 +91,16 @@ footer { background: #003366; color: white; text-align: center; padding: 40px 20
 .social-icons a:hover { color: #ffcc00; transform: scale(1.2) translateY(-5px); }
 
 .contact-container { display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; align-items: flex-start; }
-.contact-info, .contact-form { background: #f0f4f8; padding: 20px; border-radius: 12px; flex: 1 1 300px; max-width: 500px; }
-.contact-info p { margin: 15px 0; font-size: 1rem; }
+.contact-info, .contact-form { background: #f0f4f8; padding: 20px; border-radius: 12px; flex: 1 1 auto; max-width: 500px; }
+.contact-info p { margin: 10px 0; font-size: 1rem; }
 .contact-info i { color: #004080; margin-right: 8px; }
+
+/* Contact section specific - auto height based on content */
+#contact {
+  padding: 20px;
+  margin: 40px auto;
+  max-width: 800px;
+}
 </style>
 </head>
 <body>
@@ -140,34 +147,10 @@ footer { background: #003366; color: white; text-align: center; padding: 40px 20
 <section id="sectors">
 <h2>Industries We Serve</h2>
 <div class="sectors">
-<div>
-        <img src="https://images.unsplash.com/photo-1590490360182-663fc1a2a64e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Construction Workers">
-        <h3>Construction Workers</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1559339352-11d035aa65de?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Hospitality">
-        <h3>Hospitality Industry</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1594322436404-5a0521e2e9cb?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Facilities Management">
-        <h3>Facilities Management</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1603899122459-0f2f69b3cbb5?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Security">
-        <h3>Security Services</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1595433562696-a8c0d3b3d57d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Cleaning">
-        <h3>Cleaning Services</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Office Management">
-        <h3>Office Management</h3>
-      </div>
-      <div>
-        <img src="https://images.unsplash.com/photo-1581092795360-469b6a3b17f6?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Oil & Gas">
-        <h3>Oil & Gas Field</h3>
-      </div>
+<div><img src="https://images.unsplash.com/photo-1590490360182-663fc1a2a64e?auto=format&fit=crop&w=800&q=80" alt="Construction Workers"><h3>Construction Workers</h3></div>
+<div><img src="https://images.unsplash.com/photo-1559339352-11d035aa65de?auto=format&fit=crop&w=800&q=80" alt="Hospitality"><h3>Hospitality Industry</h3></div>
+<div><img src="https://images.unsplash.com/photo-1594322436404-5a0521e2e9cb?auto=format&w=800&q=80" alt="Facilities Management"><h3>Facilities Management</h3></div>
+<div><img src="https://images.unsplash.com/photo-1603899122459-0f2f69b3cbb5?auto=format&w=800&q=80" alt="Security"><h3>Security Services</h3></div>
 </div>
 </section>
 
@@ -183,7 +166,7 @@ footer { background: #003366; color: white; text-align: center; padding: 40px 20
 </form>
 </section>
 
-<section id="contact">
+<section id="contact" class="visible">
 <h2>Contact Us</h2>
 <div class="contact-container">
   <div class="contact-info">
@@ -220,4 +203,3 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
-
