--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ header::after {
   position: absolute;
   top:0; left:0;
   width:100%; height:100%;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.2); /* lighter shadow */
 }
 header * { position: relative; z-index: 2; }
 header img.logo { width: 120px; position: absolute; top: 20px; left: 20px; background: white; border-radius: 8px; padding: 5px; }
@@ -242,5 +242,3 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
-
-
