--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ footer {
 
 <nav>
   <a href="#home">Home</a>
-  <a href="#about">About Us</a>
+  <a href="about.html">About Us</a>
   <a href="#services">Services</a>
   <a href="#offices">Our Offices</a>
   <a href="#sectors">Sectors</a>
@@ -251,3 +251,4 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
