--- a/about.html
+++ b/about.html
@@ -120,7 +120,13 @@ p { line-height:1.6; }
     text-align:center;
 }
 .stats div { min-width:150px; margin:0; }
-.stats h2 { font-size:2rem; margin:0; }
+.stats h2 {
+    font-size:2rem;
+    margin:0;
+    color: #ffdd33; /* bright yellow for visibility */
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+}
+.stats p { margin-top:5px; font-weight:600; }
 
 /* Footer */
 footer {
