--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@ Our team provide strategic business consulting, application services, technology
 <button type="submit"><i class="fas fa-paper-plane"></i> Send Application</button>
 </form>
 </section>
+<!-- Other sections above -->
+
+<section id="offices">
+  <h2>Our Global Presence</h2>
+  <p><strong>Main Office:</strong> UAE</p>
+  <p><strong>Branch Offices:</strong> India, Nepal, Pakistan, Bangladesh, Africa</p>
+  <p><strong>Associate Offices:</strong> Philippines, Sri Lanka, Indonesia, Myanmar, Egypt, Sudan, Ghana, Kenya, Uganda</p>
+</section>
 
 <section id="contact" class="visible">
 <h2>Contact Us</h2>
@@ -251,4 +259,5 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
 
