--- a/index.html
+++ b/index.html
@@ -144,11 +144,13 @@ footer {
   <a href="#contact">Contact</a>
 </nav>
 
-<section id="about">
-<h2>About Us</h2>
-<p>Founded 27 years ago in the UAE, Tangent Group is a trusted recruitment agency specializing in overseas and local manpower supply. Over the years, we have successfully deployed more than We are the world leaders in an innovative workforce, a single stop solution provider for all the Business related needs inclusive but not limited to HR & Recruitment. Tangent connects the human potentials to the power of business advisory for clients and candidates. We serve both large and small organizations across all industry sectors through different brands. Tangent operates a worldwide network of offices in different continents ,“A Global reach with a local touch”
+<section id="about" style="padding: 20px 10px; max-width: 800px; margin: 0 auto;">
+  <h2 style="margin-bottom: 10px;">About Us</h2>
+  <p style="line-height: 1.5; margin: 0;">
+    Founded 27 years ago in the UAE, Tangent Group is a trusted recruitment agency specializing in overseas and local manpower supply. Over the years, we have successfully deployed more than We are the world leaders in an innovative workforce, a single stop solution provider for all the Business related needs inclusive but not limited to HR & Recruitment. Tangent connects the human potentials to the power of business advisory for clients and candidates. We serve both large and small organizations across all industry sectors through different brands. Tangent operates a worldwide network of offices in different continents ,“A Global reach with a local touch”
 
-Our team provide strategic business consulting, application services, technology solutions and Management Services.We have extensive experience in successfully executing HR and Recruitment projects throughout the UAE and other GCC countries including Oman, Qatar, Saudi Arabia and Kuwait. <strong>35,000 employees</strong> across the UAE in various industries. Our reputation is built on integrity, professionalism, and a global network of talent partners.</p>
+    Our team provide strategic business consulting, application services, technology solutions and Management Services. We have extensive experience in successfully executing HR and Recruitment projects throughout the UAE and other GCC countries including Oman, Qatar, Saudi Arabia and Kuwait. <strong>35,000 employees</strong> across the UAE in various industries. Our reputation is built on integrity, professionalism, and a global network of talent partners.
+  </p>
 </section>
 
 <section class="stats visible">
@@ -157,16 +159,17 @@ Our team provide strategic business consulting, application services, technology
   <div><h2>15+</h2><p>Global Offices</p></div>
 </section>
 
-<section id="services">
-<h2>Our Services</h2>
-<ul>
-<li>Overseas Recruitment</li>
-<li>Local Recruitment & Staffing</li>
-<li>Skilled, Semi-skilled & Unskilled Manpower Supply</li>
-<li>HR Consultancy & Workforce Planning</li>
-<li>Executive Search & Head Hunting</li>
-</ul>
+<section id="services" style="padding: 20px 10px; max-width: 800px; margin: 0 auto;">
+  <h2 style="margin: 0 0 10px 0;">Our Services</h2>
+  <ul style="margin: 0; padding-left: 20px; line-height: 1.4;">
+    <li>Overseas Recruitment</li>
+    <li>Local Recruitment & Staffing</li>
+    <li>Skilled, Semi-skilled & Unskilled Manpower Supply</li>
+    <li>HR Consultancy & Workforce Planning</li>
+    <li>Executive Search & Head Hunting</li>
+  </ul>
 </section>
+
 
 <section id="sectors">
 <h2>Industries We Serve</h2>
@@ -215,24 +218,25 @@ Our team provide strategic business consulting, application services, technology
 </section>
 <!-- Other sections above -->
 
-<section id="offices">
-  <h2>Our Global Presence</h2>
-  <p><strong>Main Office:</strong> UAE</p>
-  <p><strong>Branch Offices:</strong> India, Nepal, Pakistan, Bangladesh, Africa</p>
-  <p><strong>Associate Offices:</strong> Philippines, Sri Lanka, Indonesia, Myanmar, Egypt, Sudan, Ghana, Kenya, Uganda</p>
+<section id="offices" style="padding: 10px 15px; max-width: 700px; margin: 0 auto 20px auto;">
+  <h2 style="margin: 0 0 8px 0; font-size: 1.5em;">Our Global Presence</h2>
+  <p style="margin: 2px 0;"><strong>Main Office:</strong> UAE</p>
+  <p style="margin: 2px 0;"><strong>Branch Offices:</strong> India, Nepal, Pakistan, Bangladesh, Africa</p>
+  <p style="margin: 2px 0;"><strong>Associate Offices:</strong> Philippines, Sri Lanka, Indonesia, Myanmar, Egypt, Sudan, Ghana, Kenya, Uganda</p>
 </section>
 
-<section id="contact" class="visible">
-<h2>Contact Us</h2>
-<div class="contact-container">
-  <div class="contact-info">
-    <p><i class="fas fa-phone"></i> +971 4 3979686 | 04 - 3465669</p>
-    <p><i class="fas fa-envelope"></i> <a href="mailto:hrteam@emirates.net.ae">hrteam@emirates.net.ae</a></p>
-    <p><i class="fas fa-globe"></i> <a href="http://www.tangentdubai.com" target="_blank">www.tangentdubai.com</a></p>
-    <p><i class="fas fa-map-marker-alt"></i> Dubai, United Arab Emirates</p>
+<section id="contact" class="visible" style="padding: 30px 20px; max-width: 700px; margin: 40px auto; background-color: #f9f9f9; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); font-family: Arial, sans-serif; text-align: center;">
+  <h2 style="margin: 0 0 20px 0; font-size: 2em; color: #333;">Contact Us</h2>
+  <div class="contact-container" style="display: flex; flex-direction: column; gap: 12px; align-items: center;">
+    <div class="contact-info" style="line-height: 1.8; font-size: 1em; color: #555;">
+      <p style="margin: 0;"><i class="fas fa-phone" style="color:#007BFF;"></i> <strong>Phone:</strong> +971 4 3979686 | 04 - 3465669</p>
+      <p style="margin: 0;"><i class="fas fa-envelope" style="color:#28a745;"></i> <strong>Email:</strong> <a href="mailto:hrteam@emirates.net.ae" style="text-decoration:none; color:#007BFF;">hrteam@emirates.net.ae</a></p>
+      <p style="margin: 0;"><i class="fas fa-globe" style="color:#ffc107;"></i> <strong>Website:</strong> <a href="http://www.tangentdubai.com" target="_blank" style="text-decoration:none; color:#007BFF;">www.tangentdubai.com</a></p>
+      <p style="margin: 0;"><i class="fas fa-map-marker-alt" style="color:#dc3545;"></i> <strong>Location:</strong> Dubai, United Arab Emirates</p>
+    </div>
   </div>
-</div>
 </section>
+
 
 <footer>
 <p>&copy; 2025 Tangent Group | All Rights Reserved</p>
@@ -259,5 +263,3 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
-
-
