--- a/index.html
+++ b/index.html
@@ -222,17 +222,102 @@ Our team provide strategic business consulting, application services, technology
   <p><strong>Associate Offices:</strong> Philippines, Sri Lanka, Indonesia, Myanmar, Egypt, Sudan, Ghana, Kenya, Uganda</p>
 </section>
 
-<section id="contact" class="visible">
-<h2>Contact Us</h2>
-<div class="contact-container">
-  <div class="contact-info">
-    <p><i class="fas fa-phone"></i> +971 4 3979686 | 04 - 3465669</p>
-    <p><i class="fas fa-envelope"></i> <a href="mailto:hrteam@emirates.net.ae">hrteam@emirates.net.ae</a></p>
-    <p><i class="fas fa-globe"></i> <a href="http://www.tangentdubai.com" target="_blank">www.tangentdubai.com</a></p>
-    <p><i class="fas fa-map-marker-alt"></i> Dubai, United Arab Emirates</p>
+<section id="contact" class="contact-section">
+  <h2>Contact Us</h2>
+  <div class="contact-container">
+    <div class="contact-card">
+      <i class="fas fa-phone contact-icon"></i>
+      <h3>Call Us</h3>
+      <p>+971 4 3979686 | 04 - 3465669</p>
+    </div>
+    <div class="contact-card">
+      <i class="fas fa-envelope contact-icon"></i>
+      <h3>Email Us</h3>
+      <p><a href="mailto:hrteam@emirates.net.ae">hrteam@emirates.net.ae</a></p>
+    </div>
+    <div class="contact-card">
+      <i class="fas fa-globe contact-icon"></i>
+      <h3>Visit Our Website</h3>
+      <p><a href="http://www.tangentdubai.com" target="_blank">www.tangentdubai.com</a></p>
+    </div>
+    <div class="contact-card">
+      <i class="fas fa-map-marker-alt contact-icon"></i>
+      <h3>Our Location</h3>
+      <p>Dubai, United Arab Emirates</p>
+    </div>
   </div>
-</div>
 </section>
+
+<style>
+.contact-section {
+  padding: 60px 20px;
+  background: #f5f7fa;
+  text-align: center;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.contact-section h2 {
+  font-size: 2.5rem;
+  margin-bottom: 40px;
+  color: #333;
+}
+
+.contact-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.contact-card {
+  background: #fff;
+  padding: 25px 20px;
+  border-radius: 15px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+  transition: transform 0.3s, box-shadow 0.3s;
+  width: 250px;
+}
+
+.contact-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 15px 30px rgba(0,0,0,0.15);
+}
+
+.contact-icon {
+  font-size: 2rem;
+  color: #0077ff;
+  margin-bottom: 15px;
+}
+
+.contact-card h3 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.contact-card p {
+  font-size: 1rem;
+  color: #555;
+}
+
+.contact-card a {
+  color: #0077ff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.contact-card a:hover {
+  color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .contact-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+</style>
+
 
 <footer>
 <p>&copy; 2025 Tangent Group | All Rights Reserved</p>
@@ -259,3 +344,4 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
