--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@ Our team provide strategic business consulting, application services, technology
 <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+
 <section id="contact" class="contact-section">
   <h2>Contact Us</h2>
   <div class="contact-bar">
@@ -249,35 +252,39 @@ Our team provide strategic business consulting, application services, technology
 
 <style>
 .contact-section {
-  padding: 40px 20px;
+  padding: 60px 40px; /* increased padding for larger section */
   background: #f0f4f8;
   font-family: 'Segoe UI', sans-serif;
   text-align: center;
+  overflow-x: hidden; /* prevents last box from overflowing */
 }
 
 .contact-section h2 {
-  font-size: 2rem;
-  margin-bottom: 30px;
+  font-size: 2.5rem;
+  margin-bottom: 40px;
   color: #333;
 }
 
 /* Inline horizontal layout, no wrap */
 .contact-bar {
   display: flex;
-  justify-content: space-between; /* space evenly */
+  justify-content: space-between; /* evenly space boxes */
   gap: 20px;
-  flex-wrap: nowrap; /* no wrapping */
-  max-width: 1000px; /* optional: limits total width */
+  flex-wrap: nowrap; /* force single row */
+  max-width: 1200px; /* increased max-width */
   margin: 0 auto;   /* center the bar */
+  padding: 0 10px;
+  box-sizing: border-box;
 }
 
 /* Individual inline cards */
 .contact-item {
   background: #fff;
   border-radius: 15px;
-  padding: 20px;
-  flex: 1;          /* equal width */
-  min-width: 200px; /* ensures cards don’t get too small */
+  padding: 25px 20px;
+  flex: 1;                  /* equal width cards */
+  min-width: 220px;         /* ensures card is large enough */
+  max-width: 280px;         /* prevents too large cards */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -323,11 +330,18 @@ Our team provide strategic business consulting, application services, technology
   color: #0056b3;
 }
 
-/* Responsive: shrink cards but keep inline */
-@media (max-width: 1024px) {
+/* Responsive: shrink cards but stay inline */
+@media (max-width: 1200px) {
   .contact-bar {
     gap: 15px;
   }
+  .contact-item {
+    min-width: 200px;
+    max-width: 250px;
+  }
+}
+
+@media (max-width: 992px) {
   .contact-item {
     min-width: 180px;
   }
@@ -338,10 +352,11 @@ Our team provide strategic business consulting, application services, technology
     gap: 10px;
   }
   .contact-item {
-    min-width: 150px;
+    min-width: 160px;
   }
 }
 </style>
+
 
 
 <footer>
@@ -369,6 +384,7 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
 
 
 
