--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@ Our team provide strategic business consulting, application services, technology
 <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+
 <section id="contact" class="contact-section">
   <h2>Contact Us</h2>
   <div class="contact-bar">
@@ -252,11 +255,12 @@ Our team provide strategic business consulting, application services, technology
 
 <style>
 .contact-section {
-  padding: 60px 40px; /* increased padding for larger section */
+  padding: 60px 40px;       /* increased padding for large content */
   background: #f0f4f8;
   font-family: 'Segoe UI', sans-serif;
   text-align: center;
-  overflow-x: hidden; /* prevents last box from overflowing */
+  width: 100%;              /* ensures section expands fully */
+  box-sizing: border-box;
 }
 
 .contact-section h2 {
@@ -268,23 +272,23 @@ Our team provide strategic business consulting, application services, technology
 /* Inline horizontal layout, no wrap */
 .contact-bar {
   display: flex;
-  justify-content: space-between; /* evenly space boxes */
+  justify-content: space-around;  /* evenly distributes boxes */
   gap: 20px;
-  flex-wrap: nowrap; /* force single row */
-  max-width: 1200px; /* increased max-width */
-  margin: 0 auto;   /* center the bar */
+  flex-wrap: nowrap;              /* all boxes inline */
+  width: 100%;                    /* takes full section width */
+  max-width: 1200px;              /* optional: keeps it centered */
+  margin: 0 auto;                 /* centers bar in section */
   padding: 0 10px;
   box-sizing: border-box;
 }
 
-/* Individual inline cards */
+/* Individual cards */
 .contact-item {
   background: #fff;
   border-radius: 15px;
   padding: 25px 20px;
-  flex: 1;                  /* equal width cards */
-  min-width: 220px;         /* ensures card is large enough */
-  max-width: 280px;         /* prevents too large cards */
+  flex: 1;                         /* equal width cards */
+  min-width: 220px;                /* ensures readability */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -332,12 +336,8 @@ Our team provide strategic business consulting, application services, technology
 
 /* Responsive: shrink cards but stay inline */
 @media (max-width: 1200px) {
-  .contact-bar {
-    gap: 15px;
-  }
   .contact-item {
     min-width: 200px;
-    max-width: 250px;
   }
 }
 
@@ -349,13 +349,15 @@ Our team provide strategic business consulting, application services, technology
 
 @media (max-width: 768px) {
   .contact-bar {
+    justify-content: space-between;
     gap: 10px;
   }
   .contact-item {
-    min-width: 160px;
+    min-width: 150px;
   }
 }
 </style>
+
 
 
 
@@ -384,6 +386,7 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
 
 
 
