--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ footer {
 <body>
 
 <header>
-  <img src="tangent-logo.jpg" alt="Tangent Logo" class="logo">
+  <img src="images/tangent-logo.jpeg" alt="Tangent Logo" class="logo">
   <h1>Tangent Group - UAE</h1>
   <p>27 Years of Excellence in Recruitment & Workforce Solutions</p>
   <a href="#about" class="btn">Learn More</a>
@@ -387,6 +387,7 @@ sections.forEach(section => { observer.observe(section); });
 
 </body>
 </html>
+
 
 
 
