--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@ footer {
 
 <!-- Header -->
 <header>
-  <img src="tangent-logo.jpg" alt="Tangent Logo" class="logo">
+  <img src="images/tangent-logo.jpeg" alt="Tangent Logo" class="logo">
   <div class="header-content">
     <h1>About Us - Tangent Group</h1>
     <p class="highlight-text">27 Years of Excellence in SolutionsRecruitment & Workforce</p>
