--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Logo and Heading -->
   <div style="display:flex; align-items:center; gap:20px;">
-    <img src="logo group.png" alt="Tangent Logo" class="logo" style="height:60px; width:auto;">
+    <img src="images/logo group.png" alt="Tangent Logo" class="logo" style="height:60px; width:auto;">
     <span style="font-size:3em; font-weight:bold; color:red; -webkit-text-stroke:1px blue; text-stroke:1px blue; text-transform:uppercase; letter-spacing:2px; line-height:1;">
       Tangent Group
     </span>
@@ -427,6 +427,7 @@ document.querySelectorAll('#mainNav a').forEach(link => {
 
 </body>
 </html>
+
 
 
 
