--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ navLinks.forEach(link => {
     
     <!-- Logo & About -->
     <div style="flex:1; min-width:220px; text-align:center;">
-      <img src="https://via.placeholder.com/220x80?text=Tangent+Group" alt="Tangent Group Logo" 
+      <img src="images/logo group.png" alt="Tangent Group Logo" 
            style="max-width:100%; margin-bottom:15px; cursor:pointer;"
            onclick="this.style.filter='hue-rotate(45deg)';">
       <p style="line-height:1.6;">"The right choice of a successfully organization is not in your future Employees but in the team helping you to discover them."</p>
@@ -341,20 +341,6 @@ navLinks.forEach(link => {
         <li><a href="#contact" style="color:#fff; text-decoration:none;">Contact</a></li>
       </ul>
     </div>
-
-    <!-- Services -->
-    <div style="flex:1; min-width:200px;">
-      <h3 style="margin-bottom:15px; text-align:center;">Our Services</h3>
-      <ul style="list-style:none; padding:0; margin:0; line-height:2; text-align:center;">
-        <li>★ Business Set up Assistance</li>
-        <li>★ Outsourcing Solutions</li>
-        <li>★ HR Consulting</li>
-        <li>★ End to End Recruitment</li>
-        <li>★ Excutive & Staff Catering</li>
-        <li>★ Corporate Legal Services</li>
-      </ul>
-    </div>
-
     <!-- Contact Info -->
     <div style="flex:1; min-width:240px;">
       <h3 style="margin-bottom:15px; text-align:center;">Contact Information</h3>
@@ -427,6 +413,7 @@ document.querySelectorAll('#mainNav a').forEach(link => {
 
 </body>
 </html>
+
 
 
 
